syntax = "proto3";

package ivanrylach.hello_grpc.v1;
option go_package = "github.com/ivanrylach/hello_grpc/v1";
// TODO: following line does not work, when we use this file with grpc-gateway Kong plugin, but it is required for code generation
//import "google/api/annotations.proto";

service HelloService {

  rpc SayHello(HelloRequest) returns (HelloResponse) {
    option (google.api.http) = {
      get: "/v1/messages/{name}"
    };
  }

  rpc CreateHello(HelloRequest) returns (HelloResponse) {
    option (google.api.http) = {
      post: "/v1/messages"
    };
  }
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings
message HelloResponse {
  string message = 1;
}
